added a new line

--- a/developertest.html
+++ b/developertest.html
@@ -10,6 +10,8 @@
 <body>
     <div class="testerheading">
         <p>First Commit</p>
+        <p class="newline">
+            New line</p>
     </div>
 </body>
 
