--- a/developertest.html
+++ b/developertest.html
@@ -12,7 +12,7 @@
         <p>First Commit</p>
         <p class="newline">
             New line</p>
-        <h2>This is another person adding changes to the code on github</h2>
+        <h2 style="color=blue">This is another person adding changes to the code on github</h2>
     </div>
 </body>
 
