--- a/developertest.html
+++ b/developertest.html
@@ -5,6 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <style>
+        h2 {
+            color: blue;
+        }
+
+        .newline {
+            color: greenyellow;
+        }
+    </style>
 </head>
 
 <body>
@@ -12,7 +22,7 @@
         <p>First Commit</p>
         <p class="newline">
             New line</p>
-        <h2 style="color:blue">This is another person adding changes to the code on github!!</h2>
+        <h2>This is another person adding changes to the code on github!!</h2>
     </div>
 </body>
 
